Web Inspector: Generator functions should have a displayable name when shown in stack traces https://bugs.webkit.org/show_bug.cgi?id=164844 <rdar://problem/29300697>

Reviewed by Yusuke Suzuki.

JSTests:

* stress/generator-function-name.js:
Add another test now that we name the inner generator function
that we do not break the lexical resolution of names.

Source/JavaScriptCore:

* parser/SyntaxChecker.h:
(JSC::SyntaxChecker::createGeneratorFunctionBody):
* parser/ASTBuilder.h:
(JSC::ASTBuilder::createGeneratorFunctionBody):
New way to create a generator function with an inferred name.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseInner):
(JSC::Parser<LexerType>::parseGeneratorFunctionSourceElements):
* parser/Parser.h:
Pass on the name of the generator wrapper function so we can
use it on the inner generator function.

LayoutTests:

* inspector/debugger/js-stacktrace-expected.txt:
* inspector/debugger/js-stacktrace.html:
Add a test case for console.trace() / Error stack inside of generators.
Modernize the test to reduce redundency and get nicer output.

Canonical link: https://commits.webkit.org/182596@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208885 268f45cc-cd09-0410-ab3c-d52691b4dbfc