JSTests/stress/generator-function-name.js
@@ -10,3 +10,10 @@ var ok = function *generator()
 
 var g = ok();
 shouldBe(g.next().value, ok);
+
+function* generator2(factory)
+{
+    shouldBe(generator2, factory);
+};
+
+generator2(generator2).next();
